# AplicacionEdgeImpulseDeteccionCaidas9clases

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/empresa/aplicacionedgeimpulse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
app/src/main/cpp/tflite-model/: tflite_learn_939873_3.h  tflite_learn_939873_3.tflite
app/src/main/java/com/empresa/aplicacionedgeimpulse/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/empresa/aplicacionedgeimpulse/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
